tests/baselines/reference/exportedBlockScopedDeclarations.errors.txt
tests/cases/compiler/exportedBlockScopedDeclarations.ts(1,13): error TS2448: Block-scoped variable 'foo' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.ts(2,20): error TS2448: Block-scoped variable 'bar' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.ts(4,15): error TS2448: Block-scoped variable 'bar' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.ts(7,22): error TS2448: Block-scoped variable 'bar' used before its declaration.


==== tests/cases/compiler/exportedBlockScopedDeclarations.ts (4 errors) ====
    const foo = foo; // compile error
                ~~~
!!! error TS2448: Block-scoped variable 'foo' used before its declaration.
    export const bar = bar; // should be compile error
                       ~~~
!!! error TS2448: Block-scoped variable 'bar' used before its declaration.
    function f() {
      const bar = bar; // compile error
                  ~~~
!!! error TS2448: Block-scoped variable 'bar' used before its declaration.
    }
    namespace NS {
      export const bar = bar; // should be compile error
                         ~~~
!!! error TS2448: Block-scoped variable 'bar' used before its declaration.
    }